--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +62,7 @@ flutter:
   # หากต้องการเพิ่ม assets ให้กับแอปพลิเคชันของคุณ ให้เพิ่มส่วน assets ดังนี้:
   assets:
     - assets/images/miyabi-zzz.png # ประกาศไฟล์เฉพาะ
+    - assets/images/miyabi-za.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
